--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/UtahAdventuresIcon.png" height="50" width="80" /></a>
@@ -43,21 +42,20 @@
         </div>
     </nav>
 
-    <header class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                </div>
-                <div class="col">
-                    <h1>Utah Adventures</h1>
+    
+
+    <div>
+        <header class="jumbotron bg-transparent">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>Utah Adventures</h1>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-
-    <div class="container">
-        <div class="row row-content">
-            <div class="col-md-8 mx-auto">
+        </header>
+        <div class="row">
+            <div class="col">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
@@ -66,9 +64,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/trees.jpeg" alt="Backcountry Skiing" />
+                            <img class="d-block w-100" src="img/trees.jpg" alt="Backcountry Skiing" />
                             <div class="carousel-caption">
-                                <h3>Backcountry Skiing</h3>
+                                <h3>Backcountry Skiing</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -77,7 +75,6 @@
                                 <h3>Hiking</h3>
                             </div>
                         </div>
-                        <!-- need to adjust the size to match the other 2 pics -->
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/resort_skiing.png" alt="Resort Skiing"/>
                             <div class="carousel-caption">
@@ -96,7 +93,9 @@
                 </div>
             </div>
         </div>
+    </div>    
 
+    <div class="container">
         <div class="row align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2 class="text-sm">Recent Trips</h2>
@@ -105,7 +104,7 @@
         <div class="container2">
             <div class="row">
                 <div class="col-6">
-                    <img src="img/little_death_hollow.jpeg" alt="Little Death Hollow Pic" style="height:110%;" class="rounded">
+                    <img src="img/little_death_hollow.jpeg" alt="Little Death Hollow Pic" style="height:110%;" class="rounded w-100">
                     <div class="bottom-right">
                         <h2>Little Death Hollow</h2>
                         <p>26 miles - 3 days</p>
@@ -113,22 +112,22 @@
                 </div>
                 <div class="col">
                     <!-- how do you add a margin or padding between the two vertical images -->
-                    <img src="img/trees.jpeg" alt="Trip2" style="height: 55%;" class="rounded mx-auto d-block">
+                    <img src="img/trees.jpg" alt="Trip2" style="height: 55%;" class="rounded w-75">
                     <div class="top-right">
                         <h2>Trip 2</h2>
-                        <p> x miles - x days</p>
+                        <p class="d-none d-md-block"> x miles - x days</p>
                     </div>
-                    <img src="img/waterfall.jpeg" alt="Trip3" style="height:55%;" class="rounded">
+                    <img src="img/waterfall.jpeg" alt="Trip3" style="height:55%;" class="rounded w-75 padding-top">
                     <div class="bottom-far-right">
                         <h2>Trip 3</h2>
-                        <p>x miles - x days</p>
+                        <p class="d-none d-md-block">x miles - x days</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="row">
-            <div class="col">
+            <div class="col padding-top">
                 <h2>Adventures</h2>
                     <div id="accordion">
                         <div class="card">
@@ -208,13 +207,15 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container center">
         <div class="row row-content">
             <div class="col-12">
-                <h2>Send Me Your Feedback</h2>
+                <h2>Contact Me</h2>
+                <p>Have questions about my trips or gear?</p>
+                <p>Want ideas for your trip? (routes, packing list, etc)</p>
             </div>
             <div class="col-md-10">
-                <form>
+                <form class="padding-top">
                     <div class="form-group row">
                         <label for="firstName" class="col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
