--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> Backcountry
+                    <li class="nav-item"><a class="nav-link" href="backcountry.html"><i class="fa fa-info fa-lg"></i> Backcountry
                             Skiing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Resort Skiing</a>
+                    <li class="nav-item"><a class="nav-link" href="comingSoon.html"><i class="fa fa-list fa-lg"></i> Resort Skiing</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i>
+                    <li class="nav-item"><a class="nav-link" href="comingSoon.html"><i class="fa fa-address-card fa-lg"></i>
                             Backpacking</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i>
+                    <li class="nav-item"><a class="nav-link" href="comingSoon.html"><i class="fa fa-address-card fa-lg"></i>
                             Hiking</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i>
+                    <li class="nav-item"><a class="nav-link" href="comingSoon.html"><i class="fa fa-address-card fa-lg"></i>
                             Camping</a></li>
                 </ul>
             </div>
@@ -45,15 +45,6 @@
     
 
     <div>
-        <header class="jumbotron bg-transparent">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>Utah Adventures</h1>
-                    </div>
-                </div>
-            </div>
-        </header>
         <div class="row">
             <div class="col">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
@@ -65,18 +56,27 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/trees.jpg" alt="Backcountry Skiing" />
+                            <div class="carousel-caption caption-top">
+                                <h1>Utah Adventures</h1>
+                            </div>
                             <div class="carousel-caption">
-                                <h3>Backcountry Skiing</h4>
+                                <h3>Backcountry Skiing</h3>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/waterfall.jpeg" alt="Hiking" />
+                            <div class="carousel-caption caption-top">
+                                <h1>Utah Adventures</h1>
+                            </div>
                             <div class="carousel-caption">
                                 <h3>Hiking</h3>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/resort_skiing.png" alt="Resort Skiing"/>
+                            <div class="carousel-caption caption-top">
+                                <h1>Utah Adventures</h1>
+                            </div>
                             <div class="carousel-caption">
                                 <h3>Resort Skiing</h3>
                             </div>
@@ -106,7 +106,7 @@
                 <div class="col-6">
                     <img src="img/little_death_hollow.jpeg" alt="Little Death Hollow Pic" style="height:110%;" class="rounded w-100">
                     <div class="bottom-right">
-                        <h2>Little Death Hollow</h2>
+                        <h2><a href="comingSoon.html" class="text-white">Little Death Hollow</a></h2>
                         <p>26 miles - 3 days</p>
                     </div>
                 </div>
@@ -114,12 +114,12 @@
                     <!-- how do you add a margin or padding between the two vertical images -->
                     <img src="img/trees.jpg" alt="Trip2" style="height: 55%;" class="rounded w-75">
                     <div class="top-right">
-                        <h2>Trip 2</h2>
+                        <h2><a href="comingSoon.html" class="text-white">Trip 2</a></h2>
                         <p class="d-none d-md-block"> x miles - x days</p>
                     </div>
                     <img src="img/waterfall.jpeg" alt="Trip3" style="height:55%;" class="rounded w-75 padding-top">
                     <div class="bottom-far-right">
-                        <h2>Trip 3</h2>
+                        <h2><a href="comingSoon.html" class="text-white">Trip 3</a></h2>
                         <p class="d-none d-md-block">x miles - x days</p>
                     </div>
                 </div>
@@ -284,11 +284,11 @@
                     <!-- list won't display horizontally -->
                     <ul class="list-unstyled list-group list-group-horizontal-sm">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Backcountry Skiing</a></li>
-                        <li><a href="#">Resort Skiing</a></li>
-                        <li><a href="#">Backpacking</a></li>
-                        <li><a href="#">Hiking</a></li>
-                        <li><a href="#">Camping</a></li>
+                        <li><a href="backcountry.html">Backcountry Skiing</a></li>
+                        <li><a href="comingSoon.html">Resort Skiing</a></li>
+                        <li><a href="comingSoon.html">Backpacking</a></li>
+                        <li><a href="comingSoon.html">Hiking</a></li>
+                        <li><a href="comingSoon.html">Camping</a></li>
                     </ul>
                 </div>
             </div>
