made text appear when mouse hover over individual trips

--- a/backcountry.html
+++ b/backcountry.html
@@ -43,39 +43,39 @@
             </div>
         </nav>
         <div class="container2">
-            <img src="img/backcountry_skiing.JPG" class="img-fluid w-100" alt="Backcountry Skiing">
+            <img src="img/backcountrySkiing.JPG" class="img-fluid w-100" alt="Backcountry Skiing">
             <div class="top-centered">
                 <h1>Backcountry Skiing</h1>
             </div>
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <img src="img/backcountry_skiing.JPG" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="top-centered">
-                            <h2><a href="comingSoon.html" class="text-white" id="trip1">Little Death Hollow</a></h2>
+                        <img src="img/backcountrySkiing.JPG" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
+                        <div class="top-centered" id="mouse_over">
+                            <h2><a href="comingSoon.html" class="text-white">Mineral Fork - Big Cottonwood Canyon</a></h2>
                         </div>
                         <img src="img/sample.png" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="bottom-centered">
+                        <div class="bottom-centered" id="mouse_over">
                             <h2><a href="comingSoon.html" class="text-white">Trip X</a></h2>
                         </div>
                     </div>
                     <div class="col-4">
                         <img src="img/sample.png" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="top-centered">
+                        <div class="top-centered" id="mouse_over">
                             <h2><a href="comingSoon.html" class="text-white">Trip X</a></h2>
                         </div>
                         <img src="img/sample.png" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="bottom-centered">
+                        <div class="bottom-centered" id="mouse_over">
                             <h2><a href="comingSoon.html" class="text-white">Trip X</a></h2>
                         </div>
                     </div>
                     <div class="col-4">
                         <img src="img/sample.png" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="top-centered">
+                        <div class="top-centered" id="mouse_over">
                             <h2><a href="comingSoon.html" class="text-white">Trip X</a></h2>
                         </div>
                         <img src="img/sample.png" alt="Little Death Hollow Pic" style="height:50%;" class="rounded w-100">
-                        <div class="bottom-centered">
+                        <div class="bottom-centered" id="mouse_over">
                             <h2><a href="comingSoon.html" class="text-white">Trip X</a></h2>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4 col-sm-2 offset-1">
-                        <h2>Links</h2>
+                        <h3>Links</h3>
                         <!-- list won't display horizontally -->
                         <ul class="list-unstyled list-group list-group-horizontal-sm">
                             <li><a href="index.html">Home</a></li>
